# irisBackend

./: .env  .gitignore  .pre-commit-config.yaml  .test.db  DETECTION_API_PR_SUMMARY.md  Dockerfile  README.md  docker-compose.yml  main_cli.py  package-lock.json  pyproject.toml  render.yaml  requirements.txt  test.db  
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  auto-tag.yml  coverage.yml  dependency-update.yml  docker.yml  lint.yml  security.yml  test.yml
app/: main.py
app/ML/: classifier.py  train_classifier.py
app/api/: __init__.py  user.py
app/api/endpoints/: auth_google.py  calendar.py  email_classifier_router.py  emails.py  prediction.py  suggestion.py
app/api/routes/: auth_google.py  auth_microsoft.py  detection.py  users.py
app/core/: auth.py  config.py  encryption.py  security.py
app/db/: database.py
app/models/: __init__.py  base.py  email.py  email_classifier.pkl  feedback.py  user.py  vectorizer.pkl
app/nlp/: extractor.py  llm_fallback_openai.py
app/schemas/: detection.py  email.py  email_schema.py  prediction.py  suggestion.py  user.py
app/services/: apple_calendar_service.py  detection.py  email_classification_service.py  gmail_service.py  google_calendar_service.py  google_oauth_service.py  google_tasks_service.py  microsoft_oauth_service.py  openai_service.py  outlook_calendar_service.py  outlook_email_service.py  outlook_tasks_service.py  prediction_service.py  suggestion_service.py
postman/globals/: workspace.postman_globals.json
tests/: conftest.py  test_auth_google.py  test_calendar_api.py  test_calendar_services_unit.py  test_detection_api.py  test_detection_extractor_unit.py  test_detection_llm_fallback.py  test_emails_api.py  test_encryption.py  test_gmail_service.py  test_google_oauth_service.py  test_main.py  test_outlook_emails.py  test_prediction.py  test_prediction_api.py  test_prediction_service.py  test_suggestion_api.py  test_user_api.py  test_user_model.py
